Add configurable boolean toggle for restricted inactivity votes